--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window navTintColor="#CE1D1C" id="login" title="Login" id="loginWin" class="container" layout="vertical">
+	<Window navTintColor="#CE1D1C"  title="Login" id="loginWin" class="container" layout="vertical">
 		<LeftNavButton>
 	        <View left="0">
 	          
@@ -11,7 +11,7 @@
 		    	<Label top="5" text="Loading" color="#ffffff" />
 		    </View>
 			<ScrollView id="main" layout="vertical" height="100%" contentHeight="Ti.UI.SIZE">
-				<ImageView width="40%" borderRadius="10" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="30dp" top="30dp" image="appicon-76@2x.png"></ImageView>
+				<ImageView width="120" borderRadius="10" height="120" backgroundColor="#ff0000" bottom="30dp" top="30dp" image="/images/logo_plux.png"></ImageView>
 				<TextField id="email" hintText="Enter Email" value="" /><!--asplux@corpdemo.com -->
 				<TextField id="password" hintText="Enter Password" value="" /><!--asplux123 -->
 				<Button id="loginAccountButton" borderRadius="5" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="70%" top="20" height="40" color="#ffffff" />
