fixed some bugs

--- a/app/views/editMedical.xml
+++ b/app/views/editMedical.xml
@@ -35,8 +35,8 @@
 					</KeyboardToolbar>
 			 	</TextArea>
 			 	
-				<Label height="Ti.UI.SIZE" width="Ti.UI.FILL" left="10" top="10" textAlign="Ti.UI.TEXT_ALIGNMENT_LEFT">Proceduce</Label>
-			 	<TextArea id="proceduceTextArea" backgroundColor="#f6f6f6" color="#888" textAlign="left" hintText="Proceduce" value="" width="Ti.UI.FILL" left="10" right="10" height="200" suppressReturn="false" >
+				<Label height="Ti.UI.SIZE" width="Ti.UI.FILL" left="10" top="10" textAlign="Ti.UI.TEXT_ALIGNMENT_LEFT">Procedures</Label>
+			 	<TextArea id="proceduceTextArea" backgroundColor="#f6f6f6" color="#888" textAlign="left" hintText="Procedures" value="" width="Ti.UI.FILL" left="10" right="10" height="200" suppressReturn="false" >
 			 		<KeyboardToolbar platform="ios">
 						<Toolbar>
 							<Items> 
