--- a/app/views/appointment.xml
+++ b/app/views/appointment.xml
@@ -1,8 +1,8 @@
 <Alloy>
-	<Window title="My Appointment Records" id="win" backButtonTitle="" class="container" navTintColor="#CE1D1C">
+	<Window title="Appointment" id="win" backButtonTitle="" class="container" navTintColor="#CE1D1C">
 		<RightNavButton>
 	        <View>
-	         	<ImageView left='10' id="newRecord" width="25" height="20" image="/images/add.png" /> 
+	         	<ImageView left='10' onClick="new_appointment" id="newRecord" width="25" height="20" image="/images/add.png" /> 
 	        </View>
         </RightNavButton>
 	 	<View>
@@ -16,16 +16,16 @@
 			         	<ImageView left='10' id="btnBack" width="25" height="25" image="/images/btn-back.png" />
 			   		</View>
 			     	<View width="60%">
-			     		<Label id="pageTitle" height="Ti.UI.SIZE" class='normal_font' textAlign="center">My Appointment Records</Label>
+			     		<Label id="pageTitle" height="Ti.UI.SIZE" class='normal_font' textAlign="center">Appointment</Label>
 			     	</View>
 			     	<View left="0" width="20%">
 			         	<ImageView id="newRecord"  width="25" height="20" image="/images/add.png" />
 			   		</View>
 			 	</View>
 				<!--<SearchBar tintColor="#CE1D1C"  id="searchItem" showCancel="true" text=""  top="0" height="50" hintText="Search appointment data..." /> -->
-			 	<View id="recordView" layout="vertical" height="Ti.UI.FILL" width="Ti.UI.FILL" >
-			 		<TableView width="100%"  id="recordTable"  top="0" width="Ti.UI.FILL" height="Ti.UI.SIZE" contentWidth="Ti.UI.FILL" contentHeight="Ti.UI.SIZE"  separatorColor="#375540" />
-			 	</View>
+
+		 		<TableView width="100%"  id="recordTable"  top="0" width="Ti.UI.FILL" height="Ti.UI.FILL" contentWidth="Ti.UI.FILL" contentHeight="Ti.UI.SIZE"  separatorColor="#375540" />
+
 			</View> 
 		</View>
 	</Window>
