--- a/app/views/appointment.xml
+++ b/app/views/appointment.xml
@@ -6,10 +6,6 @@
 	        </View>
         </RightNavButton>
 	 	<View>
-		 	<View layout="vertical" id="loadingBar" height="120" width="120" borderRadius="15" backgroundColor="#2E2E2E" >
-	        	<ActivityIndicator  id="activityIndicator" />
-	        	<Label id="loading" top="5" text="Loading" color="#ffffff" />
-	        </View>
 			<View id="aView" height="Ti.UI.SIZE" top="0" layout="vertical"> 
 				<View layout="horizontal" height="50" width="Ti.UI.FILL" backgroundColor="#DEDEDE" platform="android" > 
 					<View left="0" width="20%">
@@ -23,9 +19,8 @@
 			   		</View>
 			 	</View>
 				<!--<SearchBar tintColor="#CE1D1C"  id="searchItem" showCancel="true" text=""  top="0" height="50" hintText="Search appointment data..." /> -->
-
+				<ScrollView class="wfill hfill vert" contentWidth="Ti.UI.FILL" contentHeight="Ti.UI.SIZE" id="appointment_list"></ScrollView>
 		 		<TableView width="100%"  id="recordTable"  top="0" width="Ti.UI.FILL" height="Ti.UI.FILL" contentWidth="Ti.UI.FILL" contentHeight="Ti.UI.SIZE"  separatorColor="#375540" />
-
 			</View> 
 		</View>
 	</Window>
