--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -39,6 +39,7 @@
 									<Label id="notificationText" text="0" color="#ffffff" />
 								</View>
 							</View>
+							<ImageView onClick="navWindow" mod="conversation" top="15"  width="139" image="/images/btn/btn_ask_doctor.png"/>
 						</View>
 					</ScrollView>
 				</View>
