working hour fixed

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -35,6 +35,7 @@
 							</View>
 							<ImageView onClick="navWindow" mod="conversation" top="15"  width="139" image="/images/btn/btn_ask_doctor.png"/>
 							<ImageView onClick="navWindow" mod="feedback" top="15" left="15"  width="139" image="/images/btn/btn_feedback.png"/>
+							<ImageView onClick="navWindow" mod="appointment" top="15" width="139" image="/images/btn/btn_appointment.png"/>
 						</View>
 					</ScrollView>
 				</View>
