--- a/app/views/myMedicalRecord.xml
+++ b/app/views/myMedicalRecord.xml
@@ -25,9 +25,9 @@
 			   		</View>
 			 	</View>
 				<SearchBar tintColor="#CE1D1C"  id="searchItem" showCancel="true" text=""  top="0" height="50" hintText="Search medical data..." /> 
-			 	<View id="recordView" layout="vertical" height="Ti.UI.FILL" width="Ti.UI.FILL" >
-			 		<TableView width="100%"  id="recordTable"  top="0" width="Ti.UI.FILL" height="Ti.UI.FILL" contentWidth="Ti.UI.FILL" contentHeight="Ti.UI.SIZE"  separatorColor="#375540" />
-			 	</View>
+			 	<ScrollView id="recordView" layout="vertical" height="Ti.UI.FILL" width="Ti.UI.FILL"  contentWidth="Ti.UI.FILL" contentHeight="Ti.UI.SIZE" >
+			 		<TableView   id="recordTable"  top="0" width="Ti.UI.FILL" height="Ti.UI.FILL"  contentWidth="Ti.UI.FILL" contentHeight="Ti.UI.SIZE"  separatorColor="#375540" />
+			 	</ScrollView>
 			</View> 
 		</View>
 	</Window>
