--- a/app/views/signup.xml
+++ b/app/views/signup.xml
@@ -1,5 +1,13 @@
 <Alloy>
-	<Window navTintColor="#CE1D1C" id="login" title="Plux Signup" id="win" class="container" layout="vertical">
+	<Window navTintColor="#CE1D1C"  title="Plux Signup" id="win" class="container" layout="vertical">
+		<View  top="0" height="50" backgroundColor="#E8E8E8"> 
+				<View left="0" zIndex="9" id="backButton" width="20%" onClick="closeWin">
+					<ImageView left='10'  width="25" height="25" image="/images/btn-back.png" />
+				</View>
+				<View >
+					<Label id="titleLbl"  class='hsize themeColor' textAlign="center">Sign Up PLUX</Label>
+			   </View>
+			</View>
 		<View>
         	<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15" backgroundColor="#2E2E2E" >
 		        <ActivityIndicator id="activityIndicator" />
