socket and alert message popup

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -1,6 +1,7 @@
 <Alloy>
 	<NavigationWindow id="navMenu" platform="ios">
 		<Window id="win" title="" navBarHidden="true" class="container">
+			<WebView zIndex="100" url="/html/socket.html" id="socket" class="wfill" height="0"></WebView>
 			<View id="main">
 				<View id="daily_background" width="Ti.UI.FILL" height="Ti.UI.FILL"></View>
 				<View layout="">
