--- a/app/views/loader.xml
+++ b/app/views/loader.xml
@@ -1,7 +1,7 @@
 <Alloy>
 	<Window id="rocket" navBarHidden="true" class="container">
 		<View id="overlay" />
-		<ImageView class="wsize hsize" image="/images/logo_plux.png"/>
+		<ImageView class="wsize hsize" borderRadius="5" image="/images/logo_plux.png"/>
 		<Label id="loading_text" class="wsize hsize" bottom="50" color="#ffffff"></Label>
 	</Window>
 </Alloy>
