--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -5,14 +5,14 @@
 	          
 	        </View>
         </LeftNavButton>
-       <!-- <View id="forgetPasswordBox" zIndex="10" left="10" right="10" class="wfill hsize box vert">
+       <View id="forgetPasswordBox" zIndex="10" left="10" right="10" class="wfill hsize box vert">
 			<View class="wfill hsize">
 				<Label id="addbox_title" class="padding hsize wfill" verticalAlign="center">Forgot Password</Label>
 				<ImageView onClick="closeBox" height="40" image="/images/cross.png" right="0"></ImageView>
 			</View>
 			<TextField id="box_value" class="wfill padding" hintText="Email"></TextField>
 			<Button class="button" onClick="doForgotPassword" bottom="10">Send</Button>
-	</View>-->
+		</View>
     	<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15"  backgroundColor="#2E2E2E" >
 	        <ActivityIndicator  id="activityIndicator" />
 	    	<Label top="5" bottom="10" text="Loading" color="#ffffff" />
@@ -25,7 +25,7 @@
 			<View height="60" id="fbloginView" width="70%" />
 			<Button id="registerAccountButton" borderRadius="5" backgroundColor="#7B7B7B" onTouchend="doSignup" title="Register for PLUX"  width="70%" top="5" height="40" color="#ffffff" />
 			<Button id="registerAccountButton" borderRadius="5" backgroundColor="#7B7B7B" onTouchend="doASPSignup" title="Register for ASP"  width="70%" top="5" height="40" color="#ffffff" />
-			<!--<Button borderRadius="5" backgroundColor="#7B7B7B" onTouchend="showForgetPassword" title="Forget Password"  width="70%" top="5" height="40" color="#ffffff" />-->
+			<Button borderRadius="5" backgroundColor="#7B7B7B" onTouchend="showForgetPassword" title="Forget Password"  width="70%" top="5" height="40" color="#ffffff" />
 		</ScrollView><!--
 		<View height="5%" id="footer" layout="horizontal" verticalAlign="middle">
 			 <Label class="ftText">ASPplux</Label>
