--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -14,26 +14,7 @@
 				        <ActivityIndicator  id="activityIndicator" />
 				    	<Label top="5" bottom="10" text="Loading" color="#ffffff" />
 				    </View>
-					<ScrollView id="scrollboard" width="Titanium.UI.FILL" height="Ti.UI.FILL" zIndex="3">
-						<View layout="horizontal" width="293" top="239">
-							<ImageView onClick="navWindow" mod="eCard_list" top="15" width="139" image="/images/btn/btn_asp_e_card_pass.png"/>  
-							<ImageView onClick="navWindow" mod="myHealth" left="15" top="15" width="139" image="/images/btn/btn_my_health.png"/>
-							
-							
-							<ImageView onClick="navWindow" mod="myClaim" top="15" width="139" image="/images/btn/btn_my_claim_detail.png"/>
-							<ImageView onClick="navWindow" mod="claimSubmission" top="15" left="15" width="139" image="/images/btn/btn_claim_submission.png"/>
-							
-							<ImageView onClick="navWindow" mod="profile" top="15"  width="139" image="/images/btn/btn_profile.png"/>
-							
-							<ImageView onClick="navWindow" mod="conversation" top="15"  left="15" width="139" image="/images/btn/btn_ask_me.png"/>
-							
-							<ImageView onClick="navWindow" mod="myMedicalRecord" top="15"  width="139" image="/images/btn/btn_my_medical_record.png"/>
-							<ImageView onClick="navWindow" mod="hra" top="15" left="15"  width="139" image="/images/btn/btn_hra.png"/>
-							
-							
-							<ImageView onClick="navWindow" mod="clinicLocator" top="15" width="139" image="/images/btn/btn_clinic_location.png"/>
-							<ImageView onClick="navWindow" mod="feedback" top="15" left="15"  width="139" image="/images/btn/btn_feedback.png"/>
-							
+					<ScrollView id="scrollboard" width="293" contentWidth="293" height="Ti.UI.FILL" class="horz" zIndex="3">
 							<!--<ImageView onClick="navWindow" mod="appointment" top="15"  width="139" image="/images/btn/btn_appointment.png"/> 
 						-->
 							<View class="hsize wsize">
@@ -42,8 +23,6 @@
 									<Label id="notificationText" text="0" color="#ffffff" />
 								</View>
 							</View>
-							 
-						</View>
 					</ScrollView>
 				</View>
 			</View>
