--- a/app/views/editMedical.xml
+++ b/app/views/editMedical.xml
@@ -19,38 +19,16 @@
 		 	</View>
 	 		<TextField top="0"  id="titleRecord" height="40" borderColor="#ffffff" hintText="Medical Problem" width="95%"/> 
 			<View height="1" width="100%" backgroundColor="#CE1D1C" />
-			<ScrollView id="aView" height="Ti.UI.FILL" contentHeight="Ti.UI.SIZE" layout="vertical" > 
+			<View id="aView" class="wfill hfill vert" > 
 				<Label class="hsize wfill h5 bold themeColor" left="10" top="10" textAlign="Ti.UI.TEXT_ALIGNMENT_LEFT">Clinic/Hospital/Specialist</Label>
 				<TextField top="0" left="10" right="10" id="clinicRecord" backgroundColor="#f6f6f6" borderColor="#f6f6f6" height="40" hintText="Please fill in Clinic/Hospital/Specialist" width="Ti.UI.FILL"/> 
-				
-				<Label  class="hsize wfill h5 bold themeColor" left="10" top="10" textAlign="Ti.UI.TEXT_ALIGNMENT_LEFT">Treatment</Label>
-			 	<TextArea id="treatmentTextArea" backgroundColor="#f6f6f6" color="#888" textAlign="left" hintText="Treatment" value="" width="Ti.UI.FILL" left="10" right="10" height="200" suppressReturn="false" >
-			 		<KeyboardToolbar platform="ios">
-						<Toolbar>
-							<Items> 
-								<FlexSpace/>
-								<Button onClick="hideKeyboard" backgroundImage="/images/btn-down.png" textAlign="right" right="5" width="20" height="20"  />
-							</Items>
-						</Toolbar>
-					</KeyboardToolbar>
-			 	</TextArea>
-				<Label  class="hsize wfill h5 bold themeColor" left="10" top="10" textAlign="Ti.UI.TEXT_ALIGNMENT_LEFT">Procedures</Label>
-			 	<TextArea id="proceduceTextArea" backgroundColor="#f6f6f6" color="#888" textAlign="left" hintText="Procedures" value="" width="Ti.UI.FILL" left="10" right="10" height="200" suppressReturn="false" >
-			 		<KeyboardToolbar platform="ios">
-						<Toolbar>
-							<Items> 
-								<FlexSpace/>
-								<Button onClick="hideKeyboard" backgroundImage="/images/btn-down.png" textAlign="right" right="5" width="20" height="20"  />
-							</Items>
-						</Toolbar>
-					</KeyboardToolbar>
-			 	</TextArea>
-			</ScrollView>
+				<ScrollableView backgroundColor="#cccccc" id="attachment" showPagingControl="true" class="horz wfill hsize contwfill conthsize" />
+			</View>
 		</View>
 		<ScrollView id="bigView" zIndex="99" height="Ti.UI.SIZE" layout="vertical" backgroundColor="#ffffff" opacity="0.8" bottom="0" width="80%" visible="false">
 			</ScrollView>
 		<View bottom="40"   layout="horizontal" class="wfill" height="50" >
-				<ScrollView id="attachment" scrollType="horizontal" layout="horizontal" height="Ti.UI.SIZE" width="80%" /> 
+				 
 				<View width="auto" height="Ti.UI.SIZE" onClick="showCategory" >
 					<View backgroundColor="#CE1D1C" height="50" width="Ti.UI.FILL" right="0" ><Label id="addLbl" color="#ffffff" text="+" /></View>
 				</View> 
