--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -4,11 +4,11 @@
 			<WebView zIndex="100" url="/html/socket.html" id="socket" class="wfill" height="0"></WebView>
 			<View id="main">
 				<View id="daily_background" width="Ti.UI.FILL" height="Ti.UI.FILL"></View>
-				<View layout="">
+				<View class='wfill hfill'>
 					<ImageView id="logo" borderRadius="10" width="100" height="100" top="10" left="10" defaultImage="/images/logo_plux.png" image="/appicon-60@3x.png" zIndex="5" />
-					<View zIndex="4" id="myinfo_view" layout="horizontal" height="Ti.UI.SIZE" top="20" backgroundColor="#B3000000"> 
+					<View zIndex="4" id="myinfo_view" left="110" class="wfill hsize horz" top="20" backgroundColor="#B3000000"> 
 						<!--<View height="40" id="fbloginView" />-->
-						<View left="110" width="Ti.UI.FILL" top="10" bottom="10" height="60" id="myInfo" />
+						<View left="" width="Ti.UI.FILL" top="10" bottom="10" height="60" id="myInfo" />
 					</View>
 					<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15" top="0" opacity="0" backgroundColor="#2E2E2E" >
 				        <ActivityIndicator  id="activityIndicator" />
@@ -28,11 +28,11 @@
 		<WebView zIndex="100" url="/html/socket.html" id="socket" class="wfill" height="0"></WebView>
 		<View id="main">
 			<View id="daily_background" width="Ti.UI.FILL" height="Ti.UI.FILL" ></View>
-			<View width="Ti.UI.FILL">
+			<View class="wfill hfill">
 				<ImageView id="logo" borderRadius="10" width="100" height="100" top="10" left="10" image="/images/logo_plux.png" zIndex="5" />
-				<View zIndex="4" id="myinfo_view" width="Ti.UI.FILL" height="Ti.UI.SIZE" top="20" backgroundColor="#B3000000"> 
+				<View zIndex="4" id="myinfo_view" left="110" width="Ti.UI.FILL" height="Ti.UI.SIZE" top="20" backgroundColor="#B3000000"> 
 					<!--<View height="40" id="fbloginView" />-->
-					<View layout="horizontal" left="110" width="Ti.UI.FILL" top="10" bottom="10" height="60" id="myInfo" />
+					<View width="Ti.UI.FILL" top="10" bottom="10" height="60" id="myInfo" />
 				</View>
 				<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15" top="0" opacity="0" backgroundColor="#2E2E2E" >
 			        <ActivityIndicator  id="activityIndicator" />
