--- a/app/views/more.xml
+++ b/app/views/more.xml
@@ -9,10 +9,11 @@
 		     		<Label height="Ti.UI.SIZE" class='normal_font' textAlign="center">More</Label>
 		     	</View>
 		 	</View>
-        	<ListView onItemclick="navTo">
+        	<ListView onItemclick="navTo" backgroundColor="#fff">
         	    <ListSection>
             	    <ListItem title="Edit Profile" mod='profile'></ListItem>
             	    <ListItem title="Change Password" mod='asp/changePassword'></ListItem>
+            	    <ListItem title="Exclusion List" mod='asp/exlusionList'></ListItem>
             	    <ListItem title="Logout" mod="logout"></ListItem>
         	    </ListSection>
         	</ListView>
