1. Exclusive list added infineon 2. now able to update email or mobile number 3. Clinic listing added 4. clinic search feature fixed 5. Fixed getDirection if no Waze issue for android.

--- a/app/views/more.xml
+++ b/app/views/more.xml
@@ -10,10 +10,9 @@
 		     	</View>
 		 	</View>
         	<ListView onItemclick="navTo" backgroundColor="#fff">
-        	    <ListSection>
+        	    <ListSection id="section">
             	    <ListItem title="Edit Profile" mod='profile'></ListItem>
             	    <ListItem title="Change Password" mod='asp/changePassword'></ListItem>
-            	    <ListItem title="Exclusion List" mod='asp/exlusionList'></ListItem>
             	    <ListItem title="Logout" mod="logout"></ListItem>
         	    </ListSection>
         	</ListView>
