1) socket 2) read status not show properly - fixed 3) clinic locator permission issues - fixed 4) my health BMI and BMR measurement added

--- a/app/views/webview.xml
+++ b/app/views/webview.xml
@@ -1,6 +1,6 @@
 
 <Alloy>
-	<Window title="Notification Details" backButtonTitle="" class="container" navTintColor="#CE1D1C" id="win" >
+	<Window title="" backButtonTitle="" class="container" navTintColor="#CE1D1C" id="win" >
 		<RightNavButton platform="ios">
             <!--<Button title="List" onClick="listing" />-->
         </RightNavButton>
