--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -25,7 +25,7 @@
 						</View>
 						<View class="wfill hsize vert" width="60%" left="10" id="myInfo"></View>
 					</View>
-					<ImageView onClick="navWindow" mod="more" image="/images/more-512-white.png" width="40" height="40" top="10" right="20"></ImageView>
+					<ImageView onClick="navWindow" title="MORE" mod="more" image="/images/more-512-white.png" width="40" height="40" top="10" right="20"></ImageView>
 				</View>
 				<!--<ScrollableView class='wfill padding' height="100" backgroundColor="#f0f1f5" bubbleParent="false">
 					<View class="wfill hsize">
