--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -27,7 +27,7 @@
        <View class="wfill hfill vert">
 			<ScrollView id="main" layout="vertical" height="100%" contentHeight="Ti.UI.SIZE">
 				<ImageView width="120" borderRadius="10" height="120" backgroundColor="#ff0000" bottom="20dp" top="20dp" image="/images/asp_logo.png"></ImageView>
-				<View class="wfill hsize vert" id="forms">
+				<View class="wfill hsize vert" id="forms" onClick="blurAll">
     				<View backgroundColor="#fba81c" id="email" value="" class="wfill hsize padding rounded" top="0">
                         <TextField  hintText="Email" required="1" onBlur="textFieldOnBlur"  left="5" value=""></TextField>
                     </View>
